--- a/IMDB.DAL/IMDB.DAL.csproj
+++ b/IMDB.DAL/IMDB.DAL.csproj
@@ -25,6 +25,14 @@
     <Compile Remove="Migrations\20200501230703_InitialCreate.Designer.cs" />
     <Compile Remove="Migrations\20200501230943_IniitalCreate.cs" />
     <Compile Remove="Migrations\20200501230943_IniitalCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200502015259_InitiaCreae.cs" />
+    <Compile Remove="Migrations\20200502015259_InitiaCreae.Designer.cs" />
+    <Compile Remove="Migrations\20200503032656_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200503032656_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200503033718_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200503033718_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200503040334_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200503040334_InitialCreate.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
